templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-service
spec:
  selector:
    app: k8s-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
