templates/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-network-policy
spec:
  podSelector:
    matchLabels:
      app: my-app
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: web     
    - to:
      - podSelector:
          matchLabels:
            app: app

    - from:
        - podSelector:
            matchLabels:
              app: app  
    - to:
      - podSelector:
          matchLabels:
            app: db
